--- a/views/home.erb
+++ b/views/home.erb
@@ -21,24 +21,57 @@
 <br/>
 <hr/>
 <br/>
-<% files.each do |file| %>
+<% files.each_with_index do |file, index| %>
     <% if file.match /\.wav$/ %>
   <div class="col-md-3 audio" style="margin-bottom:20px; display:block">
-    <audio controls style="width:260px;" >
+    <audio controls style="width:260px;" tabindex="0" >
       <source src="<%= file.gsub(/^public/, "") %>" type="audio/wav">
       Your browser does not support the audio element.
     </audio>
     <br/>
     <br/>
-    <textarea cols="40" rows="3" id="<%= file + ".txt"%>"><%= File.open(file << ".txt").read.to_s.strip %></textarea>
+    <textarea tabindex="<%= index + 1 %>" cols="40" rows="3" id="<%= file + ".txt"%>"><%= File.open(file << ".txt").read.to_s.strip %></textarea>
   </div>
     <% end %>
 <% end %>
 
 <script type="text/javascript">
-$("div.audio textarea").focusin(function(event){
-  $(this).parents("div.audio").find("audio")[0].play()
-})
+    $("div.audio textarea").keypress(function(event) {
+      console.log( event.which )
+      if (event.ctrlKey && (event.which != 63234 || event.which != 63235) ){
+
+        var text = (function() {
+          switch (event.which) {
+            case 12: //m
+              return " [m]";
+            case 13: //l
+              return " [f]";
+            case 3: //c
+              return "\\contact ";
+            case 10: // j
+              return "\\mp ";
+            case 21: //u
+              return "\\noise:unintelligeble ";
+            case 9: // i
+              return "<intruder1>";
+            case 23: // w
+              return "[bad wave]";
+            case 44: // , comma
+              return "\\comma\\";
+            case 46: // . period
+              return "\\period\\";
+            default:
+              return "";
+          }
+        })();
+        $(this).insertAtCursor(text);
+        return false;
+      }
+      return true;
+    });
+    $("div.audio textarea").focusin(function(event){
+      // $(this).parents("div.audio").find("audio")[0].play()
+    })
     $("div.audio textarea").focusout(function(event){
       var id = $(this).attr("id");
       var value = $(this).val()
