--- a/views/home.erb
+++ b/views/home.erb
@@ -41,17 +41,15 @@
 
 <div class="row">
   <% files.each_with_index do |file, index| %>
-      <% if file.match /\.wav$/ %>
     <div class="col-md-5 audio" style="margin-bottom:3px">
       <audio style="width:47px; display:block; float: left ;" tabindex="0" controls >
-        <source src="<%= file.gsub(/^public/, "") %>" type="audio/wav">
+        <source src="<%= file.file.gsub("public", "") %>" type="audio/wav">
         Your browser does not support the audio element.
       </audio>
-            <% color = (File.exists?(file.gsub("audio/", "output/") + ".txt")) ? "green" : "black" %>
-      <% size = (File.exists?(file.gsub("audio/", "output/") + ".txt")) ? 2 : 1 %>
-      <textarea tabindex="<%= index + 1 %>" cols="60" rows="1" id="<%= file + ".txt"%>" style="float: left ; margin-left: 5px; border: <%= size %>px solid <%= color %>;"><%= ( (text = File.open(file + ".txt").read.to_s.strip) != "" ) ? text : "[bad wave] ??" %></textarea>
+      <% color = (!file.translation.blank?) ? "green" : "black" %>
+      <% size = (!file.translation.blank?) ? 2 : 1 %>
+      <textarea tabindex="<%= index + 1 %>" cols="45" rows="1" id="<%= file.name %>" style="float: left ; margin-left: 5px; border: <%= size %>px solid <%= color %>;"><%= ( !file.translation.blank? ) ? file.translation : "[bad wave] ??" %></textarea>
     </div>
-      <% end %>
   <% end %>
 </div>
 
