--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,3 +3,8 @@
 }
 .audio-translated{ border: 2px solid yellow; }
 .audio-reviewed{ border: 2px solid yellow; }
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
