--- a/public/views/home.html
+++ b/public/views/home.html
@@ -7,22 +7,28 @@
           <th>#</th>
           <th>Name</th>
           <th>Status</th>
-          <th>News</th>
-          <th>Translated</th>
-          <th>Reviewed</th>
+          <th>New</th>
+          <th>Trs</th>
+          <th>Rev</th>
           <th></th>
         </tr>
       </thead>
       <tbody>
         <tr ng-repeat="folder in folders track by $index">
           <th>{{ $index }}</th>
-          <th><a href="#/folder/{{ folder.id }}" class="btn">{{ folder.id }}</a> [{{ folder.duration }}]</th>
+          <th>
+            <a class="btn btn-default" style="float:left" href="#/folder/{{ folder.id }}" class="btn">{{ folder.id }}</a>
+            <span style="float:right">[{{ folder.duration }}]</span>
+            <span style="float:left; clear:both;" ng-show="{{ folder.responsable }}">{{ folder.responsable.name }}</span>
+          </th>
           <th>{{ folder.status }}</th>
           <th>{{ folder.news }}</th>
           <th>{{ folder.translated }}</th>
           <th>{{ folder.reviewed }}</th>
           <th>
-            <a href="#/folder/{{ folder.id }}" class="btn">Edit</a>
+            <a class="btn btn-default" href="#/folder/{{ folder.id }}" class="btn">Edit</a>
+            <a class="btn btn-default" href="#/folder_review/{{ folder.id }}" ng-show="user.admin" class="btn">Review</a>
+            <a class="btn btn-default" href="/audio_folders_dowload/{{ folder.id }}" ng-show="user.admin" class="btn">Download</a>
           </th>
         </tr>
       </tbody>
