--- a/views/myapp.erb
+++ b/views/myapp.erb
@@ -14,7 +14,7 @@
 
 
   </head>
-  <body>
+  <body ng-controller="AppController">
 
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" ng-controller="MenuController">
       <div class="container-fluid">
