--- a/public/views/users.html
+++ b/public/views/users.html
@@ -1,7 +1,7 @@
 <div class="row">
 
   <div class="table-responsive">
-    <table class="table table-bordered table-hover">
+    <table class="table table-bordered table-striped table-hover">
       <thead>
         <tr>
           <th>#</th>
@@ -20,7 +20,6 @@
           <th>{{ user.audios.reviewed }}</th>
           <th>{{ user.audios.total_time }}</th>
           <th></th>
-
         </tr>
       </tbody>
     </table>
