--- a/public/views/users.html
+++ b/public/views/users.html
@@ -8,7 +8,9 @@
           <th>Name</th>
           <th>Translated</th>
           <th>Reviewed</th>
+          <th>Folders</th>
           <th>Total Time</th>
+          <th>Payrol</th>
           <th></th>
         </tr>
       </thead>
@@ -18,7 +20,9 @@
           <th>{{ user.name }}</th>
           <th>{{ user.audios.translated }}</th>
           <th>{{ user.audios.reviewed }}</th>
+          <th>{{ user.audios.folders }}</th>
           <th>{{ user.audios.total_time }}</th>
+          <th>{{ user.payrol }}</th>
           <th></th>
         </tr>
       </tbody>
