--- a/public/views/users.html
+++ b/public/views/users.html
@@ -8,6 +8,7 @@
           <th>Name</th>
           <th>Translated</th>
           <th>Reviewed</th>
+          <th>Folders</th>
           <th>Total Time</th>
           <th></th>
         </tr>
@@ -18,6 +19,7 @@
           <th>{{ user.name }}</th>
           <th>{{ user.audios.translated }}</th>
           <th>{{ user.audios.reviewed }}</th>
+          <th>{{ user.audios.folders }}</th>
           <th>{{ user.audios.total_time }}</th>
           <th></th>
         </tr>
