--- a/views/myapp.erb
+++ b/views/myapp.erb
@@ -34,27 +34,8 @@
     <br/>
     <br/>
     <br/>
-    <div class="container" >
-      <div class="row">
-        <div class="col-md-9" ng-view><%= yield %></div>
-        <div class="col-md-3">
-          <p>
-            <div><em>ctrl+m</em> : <span style="color:#aaa"> [m]</span></div>
-            <div><em>ctrl+l</em> : <span style="color:#aaa"> [f]</span></div>
-            <div><em>ctrl+c</em> : <span style="color:#aaa">\contact</span></div>
-            <div><em>ctrl+j</em> : <span style="color:#aaa">\mp</span></div>
-            <div><em>ctrl+i</em> : <span style="color:#aaa">\i:</span></div>
-            <div><em>ctrl+u</em> : <span style="color:#aaa">\noise:unintelligeble</span></div>
-            <div><em>ctrl+g</em> : <span style="color:#aaa">\noise:bgspeech</span></div>
-            <div><em>ctrl+r</em> : <span style="color:#aaa">&lt;intruder&gt;</span></div>
-            <div><em>ctrl+w</em> : <span style="color:#aaa">[bad wave]</span></div>
-            <div><em>ctrl+,</em> : <span style="color:#aaa">\comma\</span></div>
-            <div><em>ctrl+.</em> : <span style="color:#aaa">\period\</span></div>
-          </p>
-        </div>
-      </div>
-
-
+    <div class="container">
+      <div ng-view></div>
     </div>
 
 
@@ -62,7 +43,7 @@
     <script src="/javascripts/jquery.textarea.caret.js"></script>
     <script src="/javascripts/bower_components/angular/angular.js"></script>
     <script src="/javascripts/bower_components/angular-route/angular-route.js"></script>
-    <script src="/javascripts/bower_components/lodash/dist/lodash.min.js"></script>
+    <script src="/javascripts/bower_components/lodash/lodash.js"></script>
     <script src="/javascripts/bower_components/restangular/dist/restangular.min.js"></script>
     <script src="/javascripts/app.js"></script>
   </body>
