--- a/public/views/home.html
+++ b/public/views/home.html
@@ -13,10 +13,11 @@
       <tbody>
         <tr ng-repeat="folder in folders track by $index" ng-show="folderIsMine(folder)">
           <td class="col-xs-1 text-center">
+            {{ $index + 1}} <br/>
             {{ folder.responsable.name }}</td>
           <td class="col-xs-4">
             <div>
-              <a class="btn btn-primary" ng-show="folderIsMine(folder)" style="float:left" href="#/folder/{{ folder.id }}" class="btn">{{ folder.id }}</a>
+              <a class="btn btn-primary" ng-show="folderIsMine(folder)" style="float:left" href="#/folder/{{ folder.id }}" class="btn">{{ folder.name_short }}</a>
               <span ng-hide="folderIsMine(folder)">{{ folder.id }}</span>
               <span style="float:right">[{{ folder.duration }}]</span>
             </div>
