--- a/public/views/home.html
+++ b/public/views/home.html
@@ -13,7 +13,7 @@
       <tbody>
         <tr ng-repeat="folder in folders track by $index" ng-show="folderIsMine(folder)">
           <td class="col-xs-1 text-center">
-            {{ $index + 1}} <br/>
+            {{ $index }} <br/>
             {{ folder.responsable.name }}</td>
           <td class="col-xs-4">
             <div>
