--- a/public/views/audios.html
+++ b/public/views/audios.html
@@ -17,6 +17,7 @@
   <div class="col-xs-12 col-md-3">
     <div class="label label-default col-xs-12" style="font-size:1em;">{{ folder.name_short }}</div>
     <br/>
+
     <div class="label label-default col-xs-12">
       <div class="progress">
         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{ folder.translated }}" aria-valuemin="0" aria-valuemax="{{ folder.audios }}" style="width: {{ folder.completed }}%">
@@ -24,6 +25,8 @@
         </div>
       </div>
     </div>
+    <br/>
+    <div class="label label-default col-xs-12">{{ folder.responsable.name }}</div>
     <br/>
     <div class="label label-primary col-xs-12">{{ current_page }}</div>
     <br/>
