--- a/public/views/home.html
+++ b/public/views/home.html
@@ -13,7 +13,6 @@
       <tbody>
         <tr ng-repeat="folder in folders track by $index" ng-show="folderIsMine(folder)">
           <td class="col-xs-1 text-center">
-            {{ $index }} <br/>
             {{ folder.responsable.name }}</td>
           <td class="col-xs-4">
             <div>
@@ -25,7 +24,7 @@
           <td class="col-xs-3 text-center" >
             <div class="progress">
               <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{ folder.translated }}" aria-valuemin="0" aria-valuemax="{{ folder.audios }}" style="width: {{ folder.completed }}%">
-                <span class="sr-only">{{ folder.completed }}% Complete (success)</span>
+                {{ folder.completed }}%
               </div>
             </div>
           </td>
