--- a/public/views/audios.html
+++ b/public/views/audios.html
@@ -48,6 +48,7 @@
       <div><em>ctrl+w</em> : <span style="color:#aaa">[bad wave]</span></div>
       <div><em>ctrl+,</em> : <span style="color:#aaa">\comma\</span></div>
       <div><em>ctrl+.</em> : <span style="color:#aaa">\period\</span></div>
+      <div><em>ctrl+r</em> : <span style="color:#aaa">Re Play Audio</span></div>
     </p>
   </div>
 
