--- a/views/myapp.erb
+++ b/views/myapp.erb
@@ -19,7 +19,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" ng-controller="MenuController">
       <div class="container-fluid">
         <div class="navbar-header" >
-          <a class="navbar-brand" ng-show="user" href="#/home">Folders ({{folders.length}})</a>
+          <a class="navbar-brand" ng-show="user" href="#/home">Folders ({{folders_count}})</a>
           <a class="navbar-brand" ng-show="user.admin" href="#/users">Users</a>
         </div>
         <div class="navbar-collapse collapse">
