--- a/public/views/audios.html
+++ b/public/views/audios.html
@@ -37,17 +37,17 @@
     <br/>
 
     <p>
-      <div><em>ctrl+m</em> : <span style="color:#aaa"> [m]</span></div>
+      <!-- <div><em>ctrl+m</em> : <span style="color:#aaa"> [m]</span></div>
       <div><em>ctrl+l</em> : <span style="color:#aaa"> [f]</span></div>
-      <div><em>ctrl+c</em> : <span style="color:#aaa">\contact</span></div>
-      <div><em>ctrl+j</em> : <span style="color:#aaa">\mp</span></div>
-      <div><em>ctrl+i</em> : <span style="color:#aaa">\i:</span></div>
-      <div><em>ctrl+u</em> : <span style="color:#aaa">\noise:unintelligeble</span></div>
-      <div><em>ctrl+g</em> : <span style="color:#aaa">\noise:bgspeech</span></div>
-      <div><em>ctrl+r</em> : <span style="color:#aaa">&lt;intruder&gt;</span></div>
-      <div><em>ctrl+w</em> : <span style="color:#aaa">[bad wave]</span></div>
-      <div><em>ctrl+,</em> : <span style="color:#aaa">\comma\</span></div>
-      <div><em>ctrl+.</em> : <span style="color:#aaa">\period\</span></div>
+      <div><em>ctrl+c</em> : <span style="color:#aaa">\contact</span></div> -->
+      <div><em>ctrl+j</em> : <span style="color:#aaa">\pf</span></div>
+      <!-- <div><em>ctrl+i</em> : <span style="color:#aaa">\i:</span></div> -->
+      <div><em>ctrl+u</em> : <span style="color:#aaa">\u</span></div>
+      <div><em>ctrl+g</em> : <span style="color:#aaa">\[BG]</span></div>
+      <!-- <div><em>ctrl+r</em> : <span style="color:#aaa">&lt;intruder&gt;</span></div> -->
+      <div><em>ctrl+w</em> : <span style="color:#aaa">[BAD]</span></div>
+      <!-- <div><em>ctrl+,</em> : <span style="color:#aaa">\comma\</span></div>
+      <div><em>ctrl+.</em> : <span style="color:#aaa">\period\</span></div> -->
       <div><em>ctrl+r</em> : <span style="color:#aaa">Re Play Audio</span></div>
     </p>
   </div>
