--- a/public/views/audios.html
+++ b/public/views/audios.html
@@ -38,9 +38,9 @@
 
     <p>
       <!-- <div><em>ctrl+m</em> : <span style="color:#aaa"> [m]</span></div>
-      <div><em>ctrl+l</em> : <span style="color:#aaa"> [f]</span></div>
-      <div><em>ctrl+c</em> : <span style="color:#aaa">\contact</span></div> -->
-      <div><em>ctrl+j</em> : <span style="color:#aaa">\pf</span></div>
+      <div><em>ctrl+l</em> : <span style="color:#aaa"> [f]</span></div> -->
+      <div><em>ctrl+c</em> : <span style="color:#aaa">\contact</span></div>
+      <div><em>ctrl+j</em> : <span style="color:#aaa">\pf:</span></div>
       <!-- <div><em>ctrl+i</em> : <span style="color:#aaa">\i:</span></div> -->
       <div><em>ctrl+u</em> : <span style="color:#aaa">\u</span></div>
       <div><em>ctrl+g</em> : <span style="color:#aaa">\[BG]</span></div>
