--- a/public/views/audios.html
+++ b/public/views/audios.html
@@ -43,7 +43,7 @@
       <div><em>ctrl+j</em> : <span style="color:#aaa">\pf:</span></div>
       <!-- <div><em>ctrl+i</em> : <span style="color:#aaa">\i:</span></div> -->
       <div><em>ctrl+u</em> : <span style="color:#aaa">\u</span></div>
-      <div><em>ctrl+g</em> : <span style="color:#aaa">\[BG]</span></div>
+      <div><em>ctrl+g</em> : <span style="color:#aaa">[BG]</span></div>
       <!-- <div><em>ctrl+r</em> : <span style="color:#aaa">&lt;intruder&gt;</span></div> -->
       <div><em>ctrl+w</em> : <span style="color:#aaa">[BAD]</span></div>
       <!-- <div><em>ctrl+,</em> : <span style="color:#aaa">\comma\</span></div>
