Dividing project in parts

--- a/views/myapp.erb
+++ b/views/myapp.erb
@@ -45,6 +45,21 @@
     <script src="/javascripts/bower_components/angular-route/angular-route.js"></script>
     <script src="/javascripts/bower_components/lodash/lodash.js"></script>
     <script src="/javascripts/bower_components/restangular/dist/restangular.min.js"></script>
+    <script src="/javascripts/init.js"></script>
+
+    <script src="/javascripts/audio/audioItemDirective.js"></script>
+    <script src="/javascripts/audio/audiosController.js"></script>
+
+    <script src="/javascripts/common/appController.js"></script>
+    <script src="/javascripts/common/loginController.js"></script>
+    <script src="/javascripts/common/menuController.js"></script>
+    <script src="/javascripts/common/satellite.js"></script>
+
+    <script src="/javascripts/folders/folderController.js"></script>
+
+    <script src="/javascripts/users/userController.js"></script>
+    <script src="/javascripts/users/userService.js"></script>
+
     <script src="/javascripts/app.js"></script>
   </body>
 
