Refactor to use UI router and many other things

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,3 +13,7 @@
 .error .bg-warning{
   padding: 15px;
 }
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
