--- a/public/views/home.html
+++ b/public/views/home.html
@@ -39,7 +39,7 @@
             </span>
             <span ng-show="currentUser.admin">
               <a class="btn btn-warning" ui-sref="folders_review({id: folder.id})" class="btn">Review</a>
-              <a class="btn" ng-class="{'btn-default': folder.downloaded, 'btn-success': !folder.downloaded}" ng-show="folderReady(folder)" href="/audio_folders_dowload/{{ folder.id }}" class="btn">Download</a>
+              <a class="btn" ng-class="{'btn-default': folder.downloaded, 'btn-success': !folder.downloaded}" ng-show="folderReady(folder)" target="_blank" href="/api/audio_folders_dowload/{{ folder.id }}" class="btn">Download</a>
             </span>
           </td>
         </tr>
